[tool.poetry]
name = "mps-splatter"
version = "0.1.0"
description = "This module allows to render 3D gaussian splatting using mps."
authors = ["Thibaut CHAUFFIER <tchauffi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1 torchvision"
numpy = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
